yaml/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - image: 10.230.7.2/fin-prd-ns/signing-authority-web:latest
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: fin-prd-ns-signing-authority-image-pull-secret

status: {}
